Created the header using JavaScript

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,8 @@
         <title>Tikka Treasure</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
-        <header>
-            <nav>
-                <button>Home</button>
-                <button>Menu</button>
-                <button>About</button>
-            </nav>
-        </header>
+    <body class = "main">
+        
         <div class = "content"></div>
     </body>
 </html>
