--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     </head>
-    <body class = "main">
+    <body >
     
     </body>
 </html>
